# matcalc

./: AUTHORS  Makefile.am  configure.in  dodoc  doit  doit+clean  matcalc.dox  matcalc.dox.in
debian-src/debian-quilt/matcalc-0.1.1/debian/: changelog  control
debian-src/lucid-quilt/matcalc-0.1.1/debian/: changelog
debian-src/precise-quilt/matcalc-0.1.1/debian/: changelog
debian-src/precise-quilt/matcalc-0.1.1/debian/matcalc-dev/usr/include/matcalc/: matcalc.h
debian-src/trusty-quilt/matcalc-0.1.0/debian/: README.source  changelog
debian-src/trusty-quilt/matcalc-0.1.1/debian/: changelog  copyright
src/: Makefile.am  m4_invert.cpp  m4_multiply.cpp  m4_reorth.cpp  m4_transpose.cpp  v3_addition.cpp  v3_comparison.cpp  v3_negation.cpp  v3_substraction.cpp  v3_vectorialprod.cpp
src/include/: Makefile.am
src/include/matcalc/: matcalc.h  matcalc.h.in
