dnl 
dnl $Id$
dnl Matcalc Copyright (C) 2002 Cristelle Barillon, Jean-Daniel PAUGET
dnl A whole set of bouncing balls.
dnl 
dnl matcalc@disjunkt.com  -  http://matcalc.disjunkt.com/
dnl 
dnl 
dnl 
dnl 
dnl 
dnl This file is part of Matcalc
dnl 
dnl Matcalc is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl 
dnl Matcalc is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with Matcalc; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
dnl you can also try the web at http://www.gnu.org/
dnl 
dnl 
dnl matcalc@disjunkt.com  -  http://matcalc.disjunkt.com/

dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/include/matcalc/matcalc.h.in)

dnl Detect the canonical host and target build environment
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

dnl autoheader
dnl JDJDJDJD though useless in this package,
dnl this is here for autoheader 2.56 on msys
AM_CONFIG_HEADER(src/config.h)

dnl Setup for automake
AM_INIT_AUTOMAKE(matcalc, 0.1.0)

# set the libtool so version numbers
lt_major=0
lt_revision=0
lt_age=0

AC_SUBST(lt_major)
AC_SUBST(lt_revision)
AC_SUBST(lt_age)



dnl Check for tools

AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL

dnl Check for compiler environment

AC_C_CONST

dnl JD's standard minimum CFLAG
dnl	CFLAGS="$CFLAGS -O2 -Wall"
dnl	CXXFLAGS="$CFLAGS -O2 -Wall"
dnl CHANGED for JD's ENterGroup default nasty warnings
CFLAGS="$CFLAGS -O2 -Wall -Wcast-qual -Wwrite-strings"
dnl CXXFLAGS="$CXXFLAGS -O2 -Wall -Woverloaded-virtual -Wcast-qual -Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes -Wredundant-decls -Winline"
CXXFLAGS="$CXXFLAGS -O2 -Wall -Woverloaded-virtual -Wcast-qual -Wwrite-strings -Wstrict-prototypes -Wmissing-prototypes -Wredundant-decls"

dnl are we compiling for windows -----------------------------------------------------------

dnl first we set the default value
case "$target" in
    *-*-mingw32*)
	defbuildforwin32=yes
	;;
    *)
	defbuildforwin32=no
	;;
esac

dnl then we act as eventually required by the configure...
AC_MSG_CHECKING([whether we build for windows])
AC_ARG_ENABLE(build-for-win32,
[  --enable-build-for-win32
                          enables building for a win32 paths repartition],
     try_build_for_win32=$enableval, try_build_for_win32="$defbuildforwin32")
AC_MSG_RESULT($try_build_for_win32)

if test "$try_build_for_win32" = yes; then
    AC_DEFINE(BUILD_FOR_WIN32, 1, we build for a win32 install paths flavour)
fi


dnl Figure out which math library to use

case "$target" in
    *-*-mingw32*)
        MATHLIB=""
        SYS_GL_LIBS="-lopengl32 -lglu32"
        ;;
    *-*-beos*)
        MATHLIB=""
        SYS_GL_LIBS="-lGL"
        ;;
    *-*-linux*)
        MATHLIB="-lm"
        SYS_GL_LIBS="-L/usr/X11R6/lib -lGL"
        ;;
    *)
        MATHLIB="-lm"
        SYS_GL_LIBS="-lGL"
        ;;
esac
AC_SUBST(MATHLIB)


dnl	dnl Check for SDL
dnl	
dnl	SDL_VERSION=1.1.0
dnl	AM_PATH_SDL($SDL_VERSION,
dnl	            :,
dnl		    AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
dnl	)
dnl	CFLAGS="$CFLAGS $SDL_CFLAGS"
dnl	CXXFLAGS="$CXXFLAGS $SDL_CFLAGS"


dnl add the prefix to include search
CFLAGS="-I ${prefix}/include $CFLAGS"
CXXFLAGS="-I ${prefix}/include $CXXFLAGS"


dnl add our local include dir
CFLAGS="-I"`pwd`"/src/include/matcalc $CFLAGS"
CXXFLAGS="-I"`pwd`"/src/include/matcalc $CXXFLAGS"


dnl Check for OpenGL
AC_MSG_CHECKING(for OpenGL support)
have_opengl=no
AC_TRY_COMPILE([
 #include <GL/gl.h>
],[
],[
have_opengl=yes
])
AC_MSG_RESULT($have_opengl)
if test x$have_opengl = xyes; then
    GL_LIBS="$SDL_LIBS $SYS_GL_LIBS"
else
    AC_MSG_ERROR(Unable to find OpenGL headers and libraries)
fi
AC_SUBST(GL_LIBS)
dnl	GLUT_LIBS="$GL_LIBS -lGLU -lglut"
dnl	AC_SUBST(GLUT_LIBS)


dnl check for Total-Local build
if test "$BZOUTOTALOCAL" ; then
    
    BZOUTOTALOCALBUILD="Total-Local® "
    echo "we use Total-Local® build"
else
    BZOUTOTALOCALBUILD=""
fi
AC_SUBST(BZOUTOTALOCALBUILD)


# Finally create all the generated files
AC_OUTPUT([
	Makefile
	src/Makefile
	matcalc.dox
	src/include/Makefile
	src/include/matcalc/matcalc.h
])

